--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "cool-ascii-faces": "^1.3.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
